--- a/BlogAPP/packages.config
+++ b/BlogAPP/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net45" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net45" />
-  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net45" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Compilers" version="2.8.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="Unity" version="5.8.6" targetFramework="net45" />
 </packages>
