edited with datetime

--- a/BlogAPP/Web.config
+++ b/BlogAPP/Web.config
@@ -42,7 +42,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="BlogDBContext" providerName="System.Data.SqlClient" connectionString="server=SHAHRIAR-PC\SQLEXPRESS; database=BlogDB; integrated security=true;" />
+    <add name="BlogDBContext" providerName="System.Data.SqlClient" connectionString="server=DESKTOP-NVB0DT8\SQLSERVER; database=BlogDB; integrated security=true;" />
   </connectionStrings>
   <system.webServer>
     <handlers>
